# omega-docs

./: .gitignore  BUILD_COMPLETE.txt  BrandGenie-OMEGA-Integration.md  DECISION_DIRECTIVES_QUICK_REFERENCE.txt  DRIFT_REPORT_SUMMARY.md  Dockerfile.ppp  EXECUTE_PHASE_1_4_AUDIT.py  EXECUTE_RECLASSIFICATION.py  FINAL_EXECUTION_SUMMARY.md  HUMAN_DECISION_DIRECTIVES_PROPOSAL.md  MEMORY_AUTO_EMBEDDING_INTEGRATION.md  PHASE_1_4_AUDIT_RESULTS.txt  PHASE_5_6_EXECUTION_REPORT.md  PHASE_5_DIRECTIVE_EXECUTION_PLAN.py  PHASE_6_FILE_MOVEMENTS.py  README.md  README_FASTMCP_INTEGRATION.md  REMEDIATION_TASK_MANIFEST.md  SEAL_FINAL_EVIDENCE_PACK.py  docker-compose.ppp.yaml  dual_mode_agent_readme.md  genesis_executive_summary.md  omega-sdk.md  package-lock.json  package.json  pyproject.toml  requirements-ppp.txt
EVIDENCE/: README.md
INTERFACE/: remediation_decisions.md
PT-013-PBWB/: EXECUTION_REPORT.md  README.md  collaboration_ledger.jsonl  collaboration_ledger_test_b.jsonl  collaboration_ledger_test_c.jsonl  final_artifact.md  manifest.json
REPORT/: PPP_v0.1.0_FINAL_REPORT.md
architecture/: THREAD_AND_CHECKPOINT_INTEGRATION.md
conversational/: TITAN_CONVERSATION_SYSTEM.md
data/: ppp_progress.db
diagrams/: 07-a2a-communication.md
docs/: landing.md
doctrine/: CONVERSATIONAL_IMPLEMENTATION_GUIDE.md  PCRP-V1-RECOVERY-PROTOCOL.md  genesis-digital-civilization.md  hot-reload-system.md  mcp_registry.md
root-dump/: bootstrap.md  mcp-integration-guide.md
scripts/: apply_remediation_changes.py  generate-whitepapers-pdf.js
whitepapers/: omega-governed-execution.md
(+210 files in other folders)
